add text for pagination

--- a/i18n/en.yaml
+++ b/i18n/en.yaml
@@ -5,6 +5,10 @@ nav_older:
   other: Older
 nav_newer:
   other: Newer
+prevPage:
+  other: Newer Posts
+nextPage:
+  other: Older Posts
 
 
 page_home:
